k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: honestbee-deployment
  labels:
    app: honestbee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: honestbee
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5    
  template:
    metadata:
      labels:
        app: honestbee
    spec:
      containers:
        - name: honestbee
          image: asia.gcr.io/brave-smile-234203/honestbee:latest
          imagePullPolicy: Always
          ports:
            - name: ws-port
              containerPort: 8080
          resources: 
            requests:
              cpu: 700m
              memory: 2000Mi
            limits:
              cpu: "1"
          livenessProbe:
            tcpSocket:
              port: ws-port
            initialDelaySeconds: 15
            timeoutSeconds: 30
          readinessProbe:
            tcpSocket:
              port: ws-port
            initialDelaySeconds: 15
            timeoutSeconds: 30
      nodeSelector:
        utility: honestbee
